--- a/package.json
+++ b/package.json
@@ -37,16 +37,22 @@
     "url": "https://github.com/bozd4g/react-native-emoji-dialog/issues"
   },
   "homepage": "https://github.com/bozd4g/react-native-emoji-dialog#readme",
+  "files": [
+    "lib/**/*"
+  ],
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-native": "^0.60.5"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "@types/react": "^16.9.2",
+    "@types/react-native": "^0.60.6",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.2"
-  },
-  "files": [
-    "lib/**/*"
-  ]
+  }
 }
