--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "./lib",
-        "strict": true
+        "strict": true,
+        "types": ["react", "react-native", "jest"],
+        "lib": ["es2015"],
+        "jsx": "react-native",
+        "esModuleInterop": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
