--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   ],
   "dependencies": {
     "react": "^16.9.0",
-    "react-native": "^0.60.5"
+    "react-native": "^0.60.5",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
