--- a/package.json
+++ b/package.json
@@ -40,20 +40,25 @@
   "files": [
     "lib/**/*"
   ],
-  "dependencies": {
-    "react": "^16.9.0",
-    "react-native": "^0.60.5",
-    "react-native-linear-gradient": "^2.5.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/react": "^16.9.2",
     "@types/react-native": "^0.60.6",
-    "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "react": "^16.8.6",
+    "react-native": "^0.60.5",
+    "react-native-svg-transformer": "^0.13.0"
+  },
+  "peerDependencies": {
+    "jest": "^24.8.0",
+    "react": "^16.8.6",
+    "react-native": "^0.60.5",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-svg": "^9.6.4"
   }
 }
