--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
         "declaration": true,
         "outDir": "./lib",
         "strict": true,
-        "types": ["react", "react-native", "jest"],
         "lib": ["es2015"],
         "jsx": "react-native",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "types": ["react", "react-native", "jest"],
     },
     "include": ["src"],
-    "exclude": ["node_modules", "**/__tests__/*"]
+    "exclude": ["node_modules", "**/__tests__/*"],
 }
