--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
   "files": [
     "lib/**/*"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-svg": "^9.6.4",
+    "react-native-svg-transformer": "^0.13.0"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/react": "^16.9.2",
@@ -49,16 +53,11 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2",
-    "react": "^16.8.6",
-    "react-native": "^0.60.5",
-    "react-native-svg-transformer": "^0.13.0"
+    "typescript": "^3.5.2"
   },
   "peerDependencies": {
     "jest": "^24.8.0",
     "react": "^16.8.6",
-    "react-native": "^0.60.5",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-svg": "^9.6.4"
+    "react-native": "^0.60.5"
   }
 }
