--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-emoji-dialog",
   "version": "1.0.1",
   "description": "",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest --config jestconfig.json",
