--- a/package.json
+++ b/package.json
@@ -40,11 +40,7 @@
   "files": [
     "lib/**/*"
   ],
-  "dependencies": {
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-svg": "^9.6.4",
-    "react-native-svg-transformer": "^0.13.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "jest": "^24.8.0",
     "@types/jest": "^24.0.15",
@@ -54,7 +50,8 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "peerDependencies": {
     "react": "^16.8.6",
