--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "es6",
         "module": "commonjs",
         "declaration": true,
-        "outDir": ".",
+        "outDir": "dist/",
         "strict": true,
         "lib": ["es2015"],
         "jsx": "react-native",
